--- a/esp32/platformio.ini
+++ b/esp32/platformio.ini
@@ -8,9 +8,11 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:az-delivery-devkit-v4]
+[env:featheresp32-s2]
 platform = espressif32
-board = az-delivery-devkit-v4
+board = featheresp32-s2
 framework = arduino
-monitor_speed = 115200
-lib_deps = knolleary/PubSubClient@^2.8
+lib_deps = 
+	bblanchon/ArduinoJson@^6.21.2
+	knolleary/PubSubClient@^2.8
+	adafruit/DHT sensor library@^1.4.4
